--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section id="loginView" class="login-view">
         <div class="login-card">
           <h2>Logga in</h2>
-          <p class="login-subtitle">Endast för dig 💙</p>
+          <p class="login-subtitle">Melas flashcards :D</p>
 
           <label>
             E-post:
