--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
       </div>
     </div>
 
+    <!-- Supabase via CDN måste laddas först -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!-- Din app-logik -->
     <script src="script.js"></script>
   </body>
 </html>
