Fixad starta om knapp

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
               </div>
               <div class="course-actions">
                 <button id="studyBtn" class="btn btn-primary">Öva</button>
+                <button id="resetMasteryBtn" class="btn btn-secondary btn-sm">
+                  Börja om flashcards
+                </button>
                 <button id="addCardBtn" class="btn btn-secondary">
                   + Nytt flashcard
                 </button>
